--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -200,7 +200,7 @@ jobs:
             echo "Building Docker image for $SERVICE"
             cd $SERVICE
             echo "$(pwd)"
-            docker buildx build --platform linux/arm64 -t todolist-app/$SERVICE . --load --build-context $SERVICE
+            docker buildx build --platform linux/arm64 -t todolist-app/$SERVICE . --load 
             cd ..
           done
             
