--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Set date range
         run: |
-            YESTERDAY=$(date -u -d "24 hours ago" +%Y-%m-%dT%H:%M:%S)
+            YESTERDAY=$(date -u -d "1 hour ago" +%Y-%m-%dT%H:%M:%S)
             echo "since_time=$YESTERDAY" >> $GITHUB_ENV
 
       - name: Get commit messages from last 24h
