--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -23,7 +23,7 @@ jobs:
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
 
-      - name: cleanup
+      - name: qa cleanup
         run: |
           aws eks update-kubeconfig --region us-east-1 --name eks-blue-green
           kubectl delete deployments --all -n qa
